--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
             </div>
             <div class="col-md-4">
               <div class="gallery_box">
-                <div class="gallery_img"><img src="images/Mx2.jpg" /></div>
-                <h3 class="types_text">YFZ450R</h3>
+                <div class="gallery_img"><img src="images/mx2.jpg" /></div>
+                <h3 class="types_text">YFZ450F</h3>
                 <p class="looking_text">Start per day $65</p>
                 <div class="read_bt"><a href="#">Book Now</a></div>
               </div>
